...
  const val SIGN_OUT_BUTTON = "sign_out_button"
  const val DELETE_ACCOUNT_BUTTON = "delete_account_button"
  const val DELETE_ACCOUNT_DIALOG = "delete_account_dialog"
  const val DELETE_ACCOUNT_CONFIRM_BUTTON = "delete_account_confirm_button"
  const val DELETE_ACCOUNT_DISMISS_BUTTON = "delete_account_dismiss_button"
  const val NOTIFICATIONS_SETTING = "notifications_setting"
  const val NOTIFICATIONS_TOGGLE = "notifications_toggle"
  const val USER_TYPE_SETTING = "user_type_setting"
  const val REGULAR_USER_TYPE_BUTTON = "regular_user_type_button"
  const val PROFESSIONAL_USER_TYPE_BUTTON = "professional_user_type_button"
  const val APPEARANCE_MODE_SETTING = "appearance_mode_setting"
  const val AUTOMATIC_MODE_BUTTON = "automatic_mode_button"
  const val LIGHT_MODE_BUTTON = "light_mode_button"
  const val DARK_MODE_BUTTON = "dark_mode_button"
  const val SCREEN_TITLE = "settings_screen_title"
  const val NOTIFICATIONS_SETTING_DIALOG = "notification_setting_dialog"
  const val NOTIFICATIONS_SETTING_DIALOG_CONFIRM = "notification_setting_dialog_confirm"
  const val NOTIFICATIONS_SETTING_DIALOG_CANCEL = "notification_setting_dialog_cancel"
  const val USER_TYPE_DIALOG = "user_type_dialog"
  const val USER_TYPE_DIALOG_CONFIRM = "user_type_dialog_confirm"
...
