...
import com.android.wildex.ui.utils.refresh.WildexPullToRefreshIndicator
import com.mapbox.geojson.Point

/** Test tag constants used for UI testing of CollectionScreen components. */
object ReportScreenTestTags {
  const val NO_REPORT_TEXT = "report_screen_no_report_text"
  const val REPORT_LIST = "report_screen_report_list"
  const val MORE_ACTIONS_BUTTON = "report_screen_more_actions_button"
  const val SUBMIT_REPORT_BUTTON = "report_screen_submit_report"
  const val PULL_TO_REFRESH = "report_screen_pull_to_refresh"

  fun testTagForReport(reportId: Id, element: String): String =
      "ReportScreen_report_${reportId}_$element"

  fun testTagForProfilePicture(profileId: String, role: String = ""): String {
...
